<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/headerTomatoImageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="@+id/headerLogoImageView"
            app:layout_constraintEnd_toEndOf="@+id/headerLogoImageView"
            app:layout_constraintTop_toTopOf="@+id/headerLogoImageView"
            app:srcCompat="@drawable/header_tomato"/>

        <ImageView
            android:id="@+id/headerLogoImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/header_logo"/>

        <android.support.constraint.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/ageEditText"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/headerLogoImageView">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/male_gender_radio_button_background"
                android:button="@null"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/male_radio_button_text"
                android:textAllCaps="true"
                android:textColor="@color/gender_radio_button_text"/>

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/female_gender_radio_button_background"
                android:button="@null"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/female_radio_button_text"
                android:textAllCaps="true"
                android:textColor="@color/gender_radio_button_text"/>
        </RadioGroup>

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="@string/age_input_hint"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/weightEditText"
            app:layout_constraintEnd_toStartOf="@+id/ageImageView"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"/>

        <ImageView
            android:id="@+id/ageImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/ageEditText"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toEndOf="@+id/ageEditText"
            app:layout_constraintTop_toTopOf="@+id/ageEditText"
            app:srcCompat="@drawable/ic_age"/>

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="@string/weight_input_hint"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/heightSpinner"
            app:layout_constraintEnd_toStartOf="@+id/weightImageView"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/ageEditText"/>

        <ImageView
            android:id="@+id/weightImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/weightEditText"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toEndOf="@+id/weightEditText"
            app:layout_constraintTop_toTopOf="@+id/weightEditText"
            app:srcCompat="@drawable/ic_weight"/>

        <Spinner
            android:id="@+id/heightSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/weeklyActivitySpinner"
            app:layout_constraintEnd_toStartOf="@+id/heightImageView"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/weightEditText"/>

        <ImageView
            android:id="@+id/heightImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/heightSpinner"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toEndOf="@+id/heightSpinner"
            app:layout_constraintTop_toTopOf="@+id/heightSpinner"
            app:srcCompat="@drawable/ic_height"/>

        <Spinner
            android:id="@+id/weeklyActivitySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/weightGoalSpinner"
            app:layout_constraintEnd_toStartOf="@+id/weeklyActivityImageView"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/heightSpinner"/>

        <ImageView
            android:id="@+id/weeklyActivityImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/weeklyActivitySpinner"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toEndOf="@+id/weeklyActivitySpinner"
            app:layout_constraintTop_toTopOf="@+id/weeklyActivitySpinner"
            app:srcCompat="@drawable/ic_weekly_activity"/>

        <Spinner
            android:id="@+id/weightGoalSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/submitTextView"
            app:layout_constraintEnd_toStartOf="@+id/weightGoalImageView"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/weeklyActivitySpinner"/>

        <ImageView
            android:id="@+id/weightGoalImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/weightGoalSpinner"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toEndOf="@+id/weightGoalSpinner"
            app:layout_constraintTop_toTopOf="@+id/weightGoalSpinner"
            app:srcCompat="@drawable/ic_weight_goal"/>

        <TextView
            android:id="@+id/submitTextView"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/cse_black"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_white"
            android:gravity="center"
            android:text="@string/submit_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>